--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-"I'm so and so and this is the root of my website."
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header>
+        <h1>Abdiel</h1>
+    </header>
+    <main>  
+        <h2>ITIS3135</h2>
+        <p>My name is Abdiel</p>
+    </main>
+    <footer>
+        <p>Abdiel</p>
+    </footer>
+</body>
+</html>
