--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,1 +1,12 @@
-<h1>I am Abdiel and this is my ITIS3135 First Course Page </h1>.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>ITIS3135</h1>
+    <p>My name is Abdiel</p>
+</body>
+</html>
