--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abdiel's Website</title>
 </head>
 <body>
     <header>
-        <h1>Abdiel</h1>
+        <h1>Abdiel's Website</h1>
     </header>
     <main>  
         <h2>ITIS3135</h2>
