--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>  
         <h2>ITIS3135</h2>
         <p>My name is Abdiel</p>
+        <p>Click <a href="https://www.google.com">here</a> to go to Google</p>
     </main>
     <footer>
         <p>Abdiel</p>
