--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdiel's Website</title>
+    <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Home</title>
 </head>
 <body>
     <header>
-        <h1>Abdiel's Website</h1>
+        <h1>Abdiel Santana's Awesome Salmon  🐟 ITIS 3135</h1>
     </header>
     <main>  
-        <h2>ITIS3135</h2>
+        <h2>Home</h2>
         <p>My name is Abdiel</p>
-        <p>Click <a href="https://www.google.com">here</a> to go to Google</p>
+        <p>Click <a href="https://asantana6.github.io/">here</a> to go to my personal homepage.</p>
     </main>
     <footer>
-        <p>Abdiel</p>
+        <p>End of the site</p>
     </footer>
 </body>
 </html>
