--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>  
         <h2>Home</h2>
         <p>My name is Abdiel</p>
-        <p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my charlotte homepage.</p>
+        <p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
     </main>
     <footer>
         <p>End of the site</p>
