--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <h2>Home</h2>
         <p>My name is Abdiel</p>
         <p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
+        <a href = "itis3135/">Click to go to ITIS3135 Site</a> 
     </main>
     <footer>
-        <p>End of the site</p>
+        <p>End of the site</p> 
+        /*put the links from the doc onto the footer*/
     </footer>
 </body>
 </html>
