--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </main>
     <footer>
         <p>End of the site</p> 
-        /*put the links from the doc onto the footer*/
+       <!--/*put the links from the doc onto the footer*/--> 
     </footer>
+    
 </body>
 </html>
