--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>My name is Abdiel</p>
         <p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
         <p>Click <a href="https://asantana6.github.io/">here</a> to go to my Github.io site.</p>
-        <p>Click <a href = "itis3135/">here</a>  to go to ITIS3135 Site</p>
+        <p>Click <a href = "itis3135/">here</a>  to go to my ITIS3135 Site</p>
         <p>Click <a href = "https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">Here</a> to go to my LinkedIn Profile</p>
     </main>
     <footer>
