--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Click <a href = "https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">Here</a> to go to my LinkedIn Profile</p>
     </main>
     <footer>
-        <p>End of the site</p> 
+        <p><a href="https://github.com/asantana6">GitHub</a> 🐟 <a href="https://asantana6.github.io/">GitHub.io</a> 🐟 <a href=https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a hef="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
        <!--/*put the links from the doc onto the footer*/--> 
     </footer>
     
