--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Home</title>
-    <link rel="stylesheet" href="styles/default.css">
+    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
+<header>
+    <h1>Abdiel Santana's Awesome Salmon  🐟 ITIS 3135</h1>
+</header>
 <body>
-    <header>
-        <h1>Abdiel Santana's Awesome Salmon  🐟 ITIS 3135</h1>
-    </header>
-    <main>  
+
+    <main> 
+        <header>
+            <h1>Abdiel Santana's Awesome Salmon  🐟 ITIS 3135</h1>
+        </header> 
         <h2>Home</h2>
         <p>My name is Abdiel</p>
         <!--<p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
         <p>Click <a href="https://asantana6.github.io/">here</a> to go to my Github.io site.</p>
         <p>Click <a href = "itis3135/">here</a>  to go to my ITIS3135 Site</p>
         <p>Click <a href = "https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">Here</a> to go to my LinkedIn Profile</p>-->
+    </body>
     </main>
     <footer>
         <p><a href="https://github.com/asantana6">GitHub</a> 🐟 <a href="https://asantana6.github.io/">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a hef="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
        <!--/*put the links from the doc onto the footer*/--> 
     </footer>
     
-</body>
+
 </html>
