--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 </head>
 <body>
     <header>
-        <h1>Abdiel Santana's Awesome Salmon  🐟 ITIS 3135</h1>
+        <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135</h1>
     </header>
     <main>  
         <h2>Home</h2>
         <p>My name is Abdiel</p>
+        <P>I'm from Puerto Rico and I live in Charlotte, NC.</P>
+        <p>My favorite color is <em>purple</em> and my favorite animal is <strong>salmon</strong>.</p>
+        <p>I like to play and draw</p>
+        <p>I like monster trucks and fire trucks</p>
+        <p>I like to play guitar and sing and make music.</p>
         <!--<p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
         <p>Click <a href="https://asantana6.github.io/">here</a> to go to my Github.io site.</p>
         <p>Click <a href = "itis3135/">here</a>  to go to my ITIS3135 Site</p>
