--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Home</title>
-    <link href="https://asantana6.github.io\itis3135\styles\style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="/itis3135\styles\style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -19,6 +19,7 @@
         <p>I like to play and draw</p>
         <p>I like monster trucks and fire trucks</p>
         <p>I like to play guitar and sing and make music.</p>
+        <!--<img src="/itis3135/images/bubblesGif.gif" alt="Gif of Bubbles">-->
         <!--<p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
         <p>Click <a href="https://asantana6.github.io/">here</a> to go to my Github.io site.</p>
         <p>Click <a href = "itis3135/">here</a>  to go to my ITIS3135 Site</p>
