--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>  
         <h2>Home</h2>
         <p>My name is Abdiel</p>
-        <P>I'm from Puerto Rico and I live in Charlotte, NC.</P>
+        <p>I'm from Puerto Rico and I live in Charlotte, NC.</p>
         <p>My favorite color is <em>purple</em> and my favorite animal is <strong>salmon</strong>.</p>
         <p>I like to play and draw</p>
         <p>I like monster trucks and fire trucks</p>
