--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Home</h2>
         <p>My name is Abdiel</p>
         <p>I'm from Puerto Rico and I live in Charlotte, NC.</p>
-        <p>My favorite color is <em>purple</em> and my favorite animal is <strong>salmon</strong>.</p>
+        <p>My favorite color is <em>purple</em> and my favorite animal is salmon.</p>
         <p>I like to play and draw</p>
         <p>I like monster trucks and fire trucks</p>
         <p>I like to play guitar and sing and make music.</p>
