--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/itis3135/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="home">
     <header>
         <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135</h1>
     </header>
