--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Home</title>
+    <link href="/itis3135/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <h1>ITIS3135</h1>
-    <p>My name is Abdiel</p>
+<body class="school">
+    <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Home</h1>
+    <nav>
+        <a href="/itis3135/index.html">Home</a>
+        <a href="/itis3135/introduction.html">Introduction</a>
+        <a href="/itis3135/contract.html">Contract</a>
+        <a href="/itis3135/awesome_salmon/index.html">Awesome Salmon</a>
+    </nav>
+
+    <main>
+        <h2>  ITIS 3135 Home </h2>  
+        <p> This is all the content for my ITIS 3135 class</p>
+    </main>
+
+    <footer>
+        <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a hef="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
+        <p>Designed by Awesome Salmon</p>
+        </footer>
 </body>
 </html>
