--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -9,10 +9,10 @@
     <body>
         <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Introduction</h1>
         <nav>
-            <a href="/itis3135/index.html">Home</a>
-            <a href="/itis3135/introduction.html">Introduction</a>
-            <a href="/itis3135/contract.html">Contract</a>
-            <a href="/itis3135/awesome_salmon/index.html">Awesome Salmon</a>
+            <a href="itis3135/index.html">Home</a>
+            <a href="itis3135/introduction.html">Introduction</a>
+            <a href="itis3135/contract.html">Contract</a>
+            <a href="itis3135/awesome_salmon/index.html">Awesome Salmon</a>
         </nav>
     </body>
 </html>
