--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Home</title>
-    <link href="itis3135/styles/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body class="school">
