--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,15 +4,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Introduction</title>
-        <!--<link href="/itis3135/styles/style.css" rel="stylesheet" type="text/css" media="all">-->
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="school">
         <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Introduction</h1>
-        <nav>
+        <nav class="top">
             <a href="itis3135/index.html">Home</a>
             <a href="itis3135/introduction.html">Introduction</a>
             <a href="itis3135/contract.html">Contract</a>
             <a href="itis3135/awesome_salmon/index.html">Awesome Salmon</a>
         </nav>
+
+        <ul>
+            <li><strong>Personal background:</strong> Born in Puerto Rico and moved to NC when I was 7. I mainly draw and make music as hobbies but I like to play games in my spare time.</li>
+            <li><strong>Professional Background:</strong> I do art commissions online.            </li>
+            <li><strong>Academic Background:</strong> Majoring in Computer Science, with a concentration in Ai, Robotics, & Gaming, currently a second year.</li>
+            <li><strong>Background in this Subject:</strong> I wanted to learn more HTML so I could make my own website. I have experience with Python, Java, Javascript, and C.</li>
+            <li><strong>Primary Computer Platform:</strong> Windows 11            </li>
+            <li><strong>Courses I'm in & Why:</strong>
+                MATH1242 - Calculus II - Required
+                CTCM2530 - Critical Thinking - Required
+                ENGL2128 - Intro to Fiction Writing - I like writing creatively
+                ITSC2175 - Logic and Algorithms - Required</li>
+            <li><strong>Funny/Interesting Item about Yourself:</strong> I've been collecting vinyl records and playing guitar for nearly 3 years.</li>
+            <li><strong>I'd also like to Share:</strong>  My favorite genres of music are Prog rock, Surf Rock, and Punk Rock.</li>
+
+
+        </ul>
+
     </body>
 </html>
