--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>ITIS 3135</title>
-    </head>
-    <body>
-        <h1>ITIS 3135</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Contract</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+</head>
+<body class="school">
+    <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Contract</h1>
+    <nav class="top">
+        <a href="./">Home</a>
+        <a href="introduction.html">Introduction</a>
+        <a href="contract.html">Contract</a>
+       <!-- <a href="awesome_salmon/index.html">Awesome Salmon</a>-->
+    </nav>
+
+    <main>
+        <h2>ITIS 3135 Contract </h2>  
+        <p> I, Abdiel Santana agree to abide by the terms in my Spring 2025 ITIS-3135-091 Web-Based Application Design and Development with my instructor, D.I. von Briesen.</p>
+        <p>
+            I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
+           <p>Signed:</p>
+           <p>
+                  Abdiel Santana, 03/02/2025</p>
+    </main>
+
+    <footer>
+        <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a hef="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
+       <p>Designed by Awesome Salmon</p>
+        </footer>
+</body>
 </html>
