--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -18,7 +18,7 @@
         <p></p>
 
         <h2 class="center">Abdiel Santana 🐟 Introduction</h2>
-        <img class="center"src="images/prom.png" alt="Picture of me at prom" >
+        <img class="center small"src="images/prom.png" alt="Picture of me at prom" >
         <p class="center"><em>At prom</em></p>
         <ul>
             <li><strong>Personal background:</strong> Born in Puerto Rico and moved to NC when I was 7. I mainly draw and make music as hobbies but I like to play games in my spare time.</li>
