--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -27,7 +27,7 @@
             <li><strong>Background in this Subject:</strong> I wanted to learn more HTML so I could make my own website. I have experience with Python, Java, Javascript, and C.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11            </li>
             <p></p>
-            <li><strong>Courses I'm in and Why:</strong>
+            <li><strong>Courses I'm in and Why:</strong></li>
                 <p></p>
                <li><strong>MATH1242 - Calculus II </strong>- Want to get better at math.</li> 
                <li><strong>CTCM2530 - Critical Thinking</strong> - We get to learn about Cannibalism.</li> 
@@ -35,7 +35,11 @@
             <li><strong>ITSC2175 - Logic and Algorithms</strong> - Learn about boolean values in programming.</li>
             <li><strong>Funny/Interesting Item about Yourself:</strong> I've been collecting vinyl records and playing guitar for nearly 3 years.</li>
             <li><strong>I'd also like to Share:</strong>  My favorite genres of music are Prog rock, Surf Rock, and Punk Rock.</li>
-            </li>
-
+        </ul>
+            
+            <footer>
+                <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a hef="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
+               <p>Designed by Awesome Salmon</p>
+                </footer>
     </body>
 </html>
