--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -19,7 +19,8 @@
 
         <h2 class="center">Abdiel Santana 🐟 Introduction</h2>
         <img src="images/prom.png" class="small" alt="Picture of me at prom">
-        <p class="center"><em>At prom</em></p>
+        <figcaption class="center"><em>At prom</em></figcaption>
+        <!--p class="center"><em>At prom</em></p-->
         <ul>
             <li><strong>Personal background:</strong> Born in Puerto Rico and moved to NC when I was 7. I mainly draw and make music as hobbies but I like to play games in my spare time.</li>
             <li><strong>Professional Background:</strong> I do art commissions online.            </li>
@@ -27,12 +28,13 @@
             <li><strong>Background in this Subject:</strong> I wanted to learn more HTML so I could make my own website. I have experience with Python, Java, Javascript, and C.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11            </li>
             <p></p>
-            <li><strong>Courses I'm in and Why:</strong></li>
+            <ol><strong>Courses I'm in and Why:</strong>
                 <p></p>
                <li><strong>MATH1242 - Calculus II </strong>- Want to get better at math.</li> 
                <li><strong>CTCM2530 - Critical Thinking</strong> - We get to learn about Cannibalism.</li> 
                 <li><strong>ENGL2128 - Intro to Fiction Writing</strong> - I like writing creatively.</li> 
             <li><strong>ITSC2175 - Logic and Algorithms</strong> - Learn about boolean values in programming.</li>
+        </ol>
             <li><strong>Funny/Interesting Item about Yourself:</strong> I've been collecting vinyl records and playing guitar for nearly 3 years.</li>
             <li><strong>I'd also like to Share:</strong>  My favorite genres of music are Prog rock, Surf Rock, and Punk Rock.</li>
         </ul>
