--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>I like to play and draw</p>
         <p>I like monster trucks and fire trucks</p>
         <p>I like to play guitar and sing and make music.</p>
-        <img src="itis3135/images/catGuitar.gif" alt="Gif of a cool cat playing guitar">
+        <img class="center" src="itis3135/images/catGuitar.gif" alt="Gif of a cool cat playing guitar">
         <!--<img src="/itis3135/images/bubblesGif.gif" alt="Gif of Bubbles">-->
         <!--<p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
         <p>Click <a href="https://asantana6.github.io/">here</a> to go to my Github.io site.</p>
@@ -27,7 +27,7 @@
         <p>Click <a href = "https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">Here</a> to go to my LinkedIn Profile</p>-->
     </main>
     <footer>
-        <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a href="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
+        <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana" target="_blank">freeCodeCamp</a> 🐟 <a href="https://www.codecademy.com/profiles/asantana6" target="_blank">Codecademy</a> 🐟 <a href="itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/" target="_blank">LinkedIn</a> </p> 
        <!--/*put the links from the doc onto the footer*/-->    
        
         <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
