--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p>I like monster trucks and fire trucks</p>
         <p>I like to play guitar and sing and make music.</p>
         <img class="center" src="itis3135/images/catGuitar.gif" alt="Gif of a cool cat playing guitar">
+        <p>Click <a href="itis3135/">here</a> to go to my ITIS 3135 Site</p>
         <!--<img src="/itis3135/images/bubblesGif.gif" alt="Gif of Bubbles">-->
         <!--<p>Click <a href="https://webpages.charlotte.edu/asantan6/">here</a> to go to my Charlotte Webpages site.</p>
         <p>Click <a href="https://asantana6.github.io/">here</a> to go to my Github.io site.</p>
