--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -19,14 +19,14 @@
 
         <h2 class="center">Abdiel Santana 🐟 Introduction</h2>
         <img src="images/prom.png" class="small" alt="Picture of me at prom">
-        <figcaption class="center"><em>At prom</em></figcaption>
+        <figcaption class="center">At prom</figcaption>
         <!--p class="center"><em>At prom</em></p-->
         <ul>
             <li><strong>Personal background:</strong> Born in Puerto Rico and moved to NC when I was 7. I mainly draw and make music as hobbies but I like to play games in my spare time.</li>
-            <li><strong>Professional Background:</strong> I do art commissions online.            </li>
+            <li><strong>Professional Background:</strong> I do art commissions online.</li>
             <li><strong>Academic Background:</strong> Majoring in Computer Science, with a concentration in Ai, Robotics, and Gaming, currently a second year.</li>
             <li><strong>Background in this Subject:</strong> I wanted to learn more HTML so I could make my own website. I have experience with Python, Java, Javascript, and C.</li>
-            <li><strong>Primary Computer Platform:</strong> Windows 11            </li>
+            <li><strong>Primary Computer Platform:</strong> Windows 11</li>
             <p></p>
             <ol><strong>Courses I'm in and Why:</strong>
                 <p></p>
