--- a/itis3135/awesome_salmon/index.html
+++ b/itis3135/awesome_salmon/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Awesome Salmon</title>
+        <title>Salmon Salad</title>
     </head>
     <body>
         <header>
-            <h1>Awesome Salmon</h1>
+            <h1>Salmon Salad</h1>
             <nav>
-                <a href="/awesome-salmon/index.html">Home</a>
-                <a href="/awesome-salmon/introduction.html">Menu</a>
-                <a href="/awesome-salmon/about_us.html">About Us</a>
-                <a href="/awesome-salmon/awesome_salmon/index.html">Awesome Salmon</a>
+                <a href="./">Home</a>
+                <a href="about_us.html">About Us</a>
+                <a href="menu.html">Menu</a>
             </nav>
         </header>
         
