--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -19,7 +19,7 @@
     <main>
         <h2>ITIS 3135 Home </h2>  
         <p>This is all the content for my ITIS 3135 class</p>
-        <a href="itis3135/awesome_salmon/">Salmon Salad</a>
+        <a href="itis3135/awesome_salmon/index.html">Salmon Salad</a>
     </main>
 
     <footer>
