--- a/itis3135/awesome_salmon/about_us.html
+++ b/itis3135/awesome_salmon/about_us.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 About Us</title>
-        <link href="awesome_salmon/styles.css" rel="stylesheet" type="text/css" media="all">
+        <link href="styles.css" rel="stylesheet" type="text/css" media="all">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </head>
     <body>
