--- a/itis3135/awesome_salmon/index.html
+++ b/itis3135/awesome_salmon/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Salmon Salad</title>
+        <link href="styles.css" rel="stylesheet" type="text/css" media="all">
     </head>
     <body>
         <header>
