--- a/itis3135/awesome_salmon/about_us.html
+++ b/itis3135/awesome_salmon/about_us.html
@@ -23,6 +23,7 @@
             relationship with salmon. I became a chef to prepare and cook my favorite fish for my family and friends. 
             They told me to pursue this as a career and to start my own business.</p>
         
+            <img class="small" src="images/salmon.webp" alt="Picture of a Salmon">
         <footer>
             <p><em>Examine the Best Salmon</em></p>
         </footer>
