--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -24,7 +24,8 @@
 
     <footer>
         <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a href="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
-       <p>Page Designed by Awesome Salmon</p>
+       <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a> </p>
+       
         </footer>
 </body>
 </html>
