--- a/itis3135/santana_corp.com/index.html
+++ b/itis3135/santana_corp.com/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Salmon Salad</title>
         <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
