--- a/itis3135/santana_corp.com/index.html
+++ b/itis3135/santana_corp.com/index.html
@@ -15,18 +15,26 @@
         </header>
         
         <h2>Santana Corp's Services</h2>
-        <p>We here at Santana Corp help our customers with designing</p>
+        <p>We here at Santana Corp help our customers with designing and maintining their websites.
+            We pride ourselves in beautiful and well designed websites. We can also help manage 
+            and teach you how to make your own websites using HTML, CSS, and Javascript. However
+            we also have our own webpage hosting software. We can also help you out if you need
+            someone to manage your website or social media.
+        </p>
 
       <ul>
-        <li>Website Design</li>
-        <li>Website Maintenance</li>
+        <li>Fast and Speedy Contact</li>
+        <li>Well Designed Websites</li>
         <li>Website Hosting</li>
+        <li>Social Media Management</li>
+        <li>Website Reviews</li>
+        <li>And More!</li>
       </ul>
 
-        <p>I would like to _ Here is my contanct info: 919-555-1234</p>
+        <p>I would like to make a website for you, my client. Here is my contanct info: 919-555-1234, or email me at <a href="mailto:santanacorp97@smail.com">santanacorp97@smail.com</a></p>
 
         <footer>
-            <p>Abdiel Santana's Awesome Salmon</p>
+            <p>Page created by Santana Corp</p>
         </footer>
     </body>
 </html>
