--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <footer>
         <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana" target="_blank">freeCodeCamp</a> 🐟 <a href="https://www.codecademy.com/profiles/asantana6" target="_blank">Codecademy</a> 🐟 <a href="itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/" target="_blank">LinkedIn</a> </p> 
        <!--/*put the links from the doc onto the footer*/-->    
-       
+       <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a> </p>
         <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
        
         <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
