--- a/itis3135/santana_corp.com/index.html
+++ b/itis3135/santana_corp.com/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Salmon Salad</title>
+        <title>Santana Corp</title>
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </head>
