--- a/itis3135/santana_corp.com/index.html
+++ b/itis3135/santana_corp.com/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img src="images/santanacorp logo.svg" class="logo" alt="Logo"> 
+            <img src="images/santanacorp_logo.svg" class="logo" alt="Logo"> 
             <h1>Santana Corp</h1>
         </header>
         
