--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -18,9 +18,8 @@
 
     <main>
         <h2>ITIS 3135 Contract </h2>  
-        <p> I, Abdiel Santana agree to abide by the terms in my Spring 2025 ITIS-3135-091 Web-Based Application Design and Development with my instructor, D.I. von Briesen.</p>
-        <p>
-            I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
+        <p>I, Abdiel Santana agree to abide by the terms in my Spring 2025 ITIS-3135-091 Web-Based Application Design and Development with my instructor, D.I. von Briesen.</p>
+        <p>I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
            <p>Signed:</p>
            <p>
                   Abdiel Santana, 03/02/2025</p>
