--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -19,7 +19,7 @@
 
         <h2 class="center">Abdiel Santana 🐟 Introduction</h2>
         <img src="images/prom.png" class="small" alt="Picture of me at prom">
-        <figcaption class="center">At prom</figcaption>
+        <p class="center">At prom</p>
         <!--p class="center"><em>At prom</em></p-->
         <ul>
             <li><strong>Personal background:</strong> Born in Puerto Rico and moved to NC when I was 7. I mainly draw and make music as hobbies but I like to play games in my spare time.</li>
