--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -28,7 +28,8 @@
             <li><strong>Background in this Subject:</strong> I wanted to learn more HTML so I could make my own website. I have experience with Python, Java, Javascript, and C.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11</li>
         </ul>
-            <ol><strong>Courses I'm in and Why:</strong>
+            <ol>
+                <strong>Courses I'm in and Why:</strong>
                
                <li><strong>MATH1242 - Calculus II </strong>- Want to get better at math.</li> 
                <li><strong>CTCM2530 - Critical Thinking</strong> - We get to learn about Cannibalism.</li> 
