--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -38,6 +38,7 @@
                <li><strong>CTCM2530 - Critical Thinking</strong> - We get to learn about Cannibalism.</li> 
                 <li><strong>ENGL2128 - Intro to Fiction Writing</strong> - I like writing creatively.</li> 
             <li><strong>ITSC2175 - Logic and Algorithms</strong> - Learn about boolean values in programming.</li>
+            <li><strong>ITSC3135 - Web-Based Application Design and Development</strong> - I wanted to learn how to code in HTML.</li>
         </ol>
         <ul>
             <li><strong>Funny/Interesting Item about Yourself:</strong> I've been collecting vinyl records and playing guitar for nearly 3 years.</li>
