--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -8,14 +8,9 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </head>
     <body class="school">
-        <h1>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Introduction</h1>
-        <nav class="top">
-            <a href="./">Home</a>
-            <a href="introduction.html">Introduction</a>
-            <a href="contract.html">Contract</a>
-           <!-- <a href="awesome_salmon/index.html">Awesome Salmon</a>-->
-        </nav>
-        <p></p>
+        
+        <div data-include="components/header.html"></div>
+        <br>
 
         <h2 class="center">Abdiel Santana 🐟 Introduction</h2>
         <img src="images/prom.png" class="small" alt="Picture of me at prom">
@@ -45,9 +40,7 @@
             <li><strong>I'd also like to Share:</strong>  My favorite genres of music are Prog rock, Surf Rock, and Punk Rock.</li>
         </ul>
             
-            <footer>
-                <p><a href="https://github.com/asantana6" target="_blank">GitHub</a> 🐟 <a href="https://asantana6.github.io/" target="_blank">GitHub.io</a> 🐟 <a href="https://webpages.charlotte.edu/asantan6/">CLT Webspace</a> 🐟 <a href="https://www.freecodecamp.org/asantana">freeCodeCamp</a> 🐟 <a href="https://www.codecademy.com/profiles/asantana6">Codecademy</a> 🐟 <a href="https://asantana6.github.io/itis3135/index.html">itis3135.io</a> 🐟 <a href="https://www.linkedin.com/in/abdiel-santana-rivera-6bb7a7294/">LinkedIn</a> </p> 
-                <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a> </p>
-                </footer>
+        <div data-include="components/footer.html"></div>
+        <script src="scripts/htmlinclude.js"></script>
     </body>
 </html>
