--- a/itis3135/stuff/WEB SIT😭E.htm
+++ b/itis3135/stuff/WEB SIT😭E.htm
@@ -103,7 +103,7 @@
                 Wow.
                 </p>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <a href="././">click here to go back to my itis3135 site</a>
+            <a href="https://asantana6.github.io/itis3135/">click here to go back to my itis3135 site</a>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> a suppppper cool link trust you should totally click it not a virus</a>
         </main>
         <footer>
