--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -13,17 +13,24 @@
         <main>
             <h2>Website Evaluations</h2>
             <section>
-                <p>Good Design</p>
+                <h3>Good Design</h3>
                 <a href="https://www.icebergdoc.org/" target="_blank">IcebergDoc</a>
-                <p>The website is for a documentary about climate change. </p>
+                <h4>The website is for a documentary about climate change. </h4>
                 <ul>
-                    <li>Contrast: The site has </li>
-                    <li>R:</li>
-                    <li>A:</li>
-                    <li>P:</li>
+                    <li>Contrast: The site has good contrast, it has white text over darker backgrounds, allowing for ease of readability.</li>
+                    <li>Repitition: The site only repeat certain ideas and images. Like it contains several pencil scratches throughout the page
+                        , and pictures of icebergs.
+                    </li>
+                    <li>Alignment: The navbar is always at the top. The text changes whether its aligned left or centered, but it does so in ways that make sense
+                        and look appealing.
+                    </li>
+                    <li>Proximity: The site is well organized, as I scroll down it does get a bit confusing once the scrolling moves things left and right instead
+                         of up and down.</li>
                 </ul>
 
-                <p>Assesment</p>
+                <p>Overall, I think the website, while being a bit confusing at first, is well designed and easy to read. There are lots of flowing graphics and smooth
+                    animations that make it a fun experience to look at.
+                </p>
             </section>
 
             <section>
