--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -15,7 +15,7 @@
             <section>
                 <h3>Good Design</h3>
                 <a href="https://www.icebergdoc.org/" target="_blank">IcebergDoc</a>
-                <h4>The website is for a documentary about climate change. </h4>
+                <p>The website is for a documentary about climate change. </p>
                 <ul>
                     <li>Contrast: The site has good contrast, it has white text over darker backgrounds, allowing for ease of readability.</li>
                     <li>Repitition: The site only repeat certain ideas and images. Like it contains several pencil scratches throughout the page
@@ -34,7 +34,7 @@
             </section>
 
             <section>
-                <p>Bad Design</p>
+                <h2>Bad Design</h2>
                 <a href="https://arngren.net/" target="_blank">Arngren</a>
                 <p>The website is a norwegian website made to sell automobiles and other objects. It is hard to tell
                     what exactly it does because of how cluttered and full the website is. It is also hard to navigate
