--- a/hobby/index.html
+++ b/hobby/index.html
@@ -6,14 +6,42 @@
         <title>Abdiel Santana's Awesome Salmon 🐟 ITIS 3135 🐟 Hobby</title>
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body style="background-color: rgb(109, 253, 196); color: rgb(79, 61, 23);">
         <header>
             <h1>Music</h1>
         </header>
         
         <section>Who</section>
-        <section>What</section>
-        <section>When</section>
+        <section>What
+            <p>My hobby is making music. It's a bit of an ambiguous thing to say but that's because 
+            I am oftentimes doing very different things with my music. For example, I like to make
+            rock music, jazz music, and videogame music. I dabble with classical music, and ambient/expeimental
+            music. I love Prog Rock, Punk Rock, and Surf Rock. These genres hugely influence the music I make.
+        </p>
+        <p>
+            Some of my biggest musical influences are:
+            <ul>
+                <li>Emerson, Lake, and Palmer (ELP)</li>
+                <li>Pink Floyd</li>
+                <li>Primus</li>
+                <li>Nobuo Uematsu</li>
+                <li>Swans</li>
+                <li>King Crimson</li>
+                <li>The Smiths</li>
+                <li>Dead Kennedys</li>
+                <li>Toby Fox</li>
+                <li>Zun</li>
+
+            </ul>
+        </p>
+        <p> 3rd thing</p>
+
+        </section>
+
+        <section>When
+            
+
+        </section>
         <section>Where</section>
         <section>How</section>
         <section>Why</section>
