--- a/hobby/index.html
+++ b/hobby/index.html
@@ -60,8 +60,12 @@
         </section>
 
         <section>How
-            
+
         </section>
-        <section>Why</section>
+        <section>Why
+            <p>I make music because I love it. Ive been listening to music for years now and its been a huge part of my life
+                since I started.
+            </p>
+        </section>
       
     </body>
