--- a/hobby/index.html
+++ b/hobby/index.html
@@ -60,6 +60,28 @@
         </section>
 
         <section>How
+                <p>Depending on what music I am making, I might use a computer or a guitar. Usually I use a computer, but sometimes I have 
+                    written some music or riffs on either guitar or piano. I have a mini keyboard I can plug into my computer, and a full
+                    88 key piano back at home that I use and practice. I can also plug my guitar into my computer to record and practice.
+                </p>
+
+                <p>The program I use when making music is FL Studio. Ive been using it for years, however only more recently have I been
+                    using it more often, since I found out how to use soundfonts. Soundfonts are a collection of instruments in the sf2 file
+                    format that is used to make sound in FL Studio. I have a collection of soundfonts that I use when I make music, mainly from
+                    old school videogames. My favorite soundfonts are the Touhou soundfonts, the Final Fantasy 7 soundfonts, and the PC-98
+                    soundfont. These contain a wide variety of both live sounding instruments, and old sounding instruments.  </p>
+                    
+                <p>
+                    I play with a Seafoam Green Squier Stratocaster. Ive been wanting to upgrade my guitar, but this one gets the job done. It
+                    has a nice tone that I like, and the colors are awesome. I play on bridge pickups, and tend to pick as close as I can to the 
+                    bridge to give the guitar a twangy and sphagetti tone that is heard in surf guitar and in jangle guitar. 
+                    When it comes to guitar effects I have two sounds I like. One is a jangley sound, and the other is distorted. For my jangley sound
+                    I use chorus with both rate and width at around 1oClock, and I use spring reverb with knob at 12oClock. My distorted sound
+                    has bass and mids at 2oClock, and treble at 1oClock. This is because I do not like when distorted guitar has too much treble
+                    and too little bass. It's one of my issues with a lot of metal music as that is the guitar tone in most metal music. Punk has 
+                    amazing tones as its usually very punchy and has a good amount of bass and mids. I usually put the distortion knob low (8oClock)since I don't 
+                    like it being too loud nor too distorted. 
+                </p>
 
         </section>
         <section>Why
