--- a/hobby/index.html
+++ b/hobby/index.html
@@ -85,8 +85,9 @@
 
         </section>
         <section>Why
-            <p>I make music because I love it. Ive been listening to music for years now and its been a huge part of my life
-                since I started.
+            <p>I make music because I love it. I've been listening to music for years now and its been a huge part of my life
+                since I started. I think music is very lovely as it is a sort of universal language. You can listen to music from all around 
+                the world and enjoy it.
             </p>
         </section>
       
