--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -20,16 +20,18 @@
             </nav>
         </header>
         
-        <section>Who
+        <section> <h3>Who</h3>
             <p>
-                I am Abdiel. Im Puertorican who has been making music for around four years. I play guitar and am learning
+                I am Abdiel. Im a Puertorican who has been making music for around four years. I play guitar and am learning
                 how to play piano and keys. In the future I want to learn how to play drums, bass guitar, and organ. Im a music
                 nerd who reads up a lot on information on bands and music I like. 
             </p>
 
             <p>
-                In my free time, I also draw. I like illustrating and designing characters. Ive been drawing nearly all my life,
-                but only really started taking it seriously around six years ago. 
+                In my free time, I also draw. I like illustrating and designing characters. I've been drawing nearly all my life,
+                but only really started taking it seriously around six years ago. Alongside drawing, I also like to
+                sing. I was a part of a choir group during my senior year of high school, and I was a bass 2. This meant I was singing
+                the lowest notes in the ensemble. I also learned most of my music theory in that class which I still use to this day.
             </p>
 
             <audio controls>
