--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -40,8 +40,8 @@
 
             
                 <figure>
-                    <img src="" class="small" alt="Me"> 
-                    <figcaption>Me</figcaption>
+                    <img src="img/meMog.jpg"  alt="Me and my Friend" size="30%"> 
+                    <figcaption>Me on the left</figcaption>
                 </figure>
         </section>
 
