--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -40,7 +40,7 @@
 
             
                 <figure>
-                    <img src="img/meMog.jpg"  alt="Me and my Friend" size="30%"> 
+                    <img src="img/meMog.jpg"  alt="Me and my Friend"> 
                     <figcaption>Me on the left</figcaption>
                 </figure>
         </section>
@@ -56,7 +56,7 @@
             music. I love Prog Rock, Punk Rock, and Surf Rock. These genres hugely influence the music I make.
         </p>
         <p>
-            Some of my biggest musical influences are:
+            Some of my biggest musical influences are: </p>
             <ul>
                 <li>Emerson, Lake, and Palmer (ELP)</li>
                 <li>Pink Floyd</li>
@@ -70,7 +70,7 @@
                 <li>Zun</li>
 
             </ul>
-        </p>
+       
 
         <audio controls>
             <source src="music/progRock.mp3" type="audio/mpeg">
