--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -158,7 +158,13 @@
             <audio controls>
                 <source src="music/oldCastle.ogg" type="audio/ogg">
             </audio>
+            <figure>
+                <img src="img/keys.png" class="small" alt="My Keyboard I plug into my computer"> 
+                <figcaption>My Keyboard</figcaption>
+            </figure>
         </section>
+
+      
       
         <section id="ai" class="content-section">
             <h3>AI Prompts</h3>
