--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -34,6 +34,7 @@
                 but only really started taking it seriously around six years ago. Alongside drawing, I also like to
                 sing. I was a part of a choir group during my senior year of high school, and I was a bass 2. This meant I was singing
                 the lowest notes in the ensemble. I also learned most of my music theory in that class which I still use to this day.
+                I looked through my old notes to help me make this song:
             </p>
 
             <audio controls>
@@ -108,7 +109,8 @@
             </p>
             <p>I've played music in a lot of different places. I usually play music while I'm at friend's houses who have instruments
                 . But I've also played and performed on stage and on TV. However, it's never any of my music as I performed either
-                with my choir ensemble or by myself as a cover for school.
+                with my choir ensemble or by myself as a cover for school. Sometimes I write music outside of my room. I wrote the idea for this 
+                song during class and I made this when I got back from class:
             </p>
 
             <audio controls>
@@ -156,7 +158,7 @@
             </p>
 
             <audio controls>
-                <source src="music/oldCastle.ogg" type="audio/ogg">
+                <source src="music/oldCastle.mp3" type="audio/mpeg">
             </audio>
             <figure>
                 <img src="img/keys.png" class="small" alt="My Keyboard I plug into my computer"> 
