--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -184,8 +184,8 @@
                 For example: When the user clicks on a section it shows that section and nothing else, 
                 when they click a different section the different section shows and the other sections are hidden.</p>
                 <p>How do I make it default to a specific section? (For example section 2)</p>
-                <p>If I want to show text on the left of the screen and an image on the right of the website, how would I do it in HTML?</p>
-        </section>
+                <!--p>If I want to show text on the left of the screen and an image on the right of the website, how would I do it in HTML?</p>
+            --></section>
         <footer>
             <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Return to the <a href="/itis3135/index.html">ITIS 3135</a> page?</p>
           
