--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -88,7 +88,10 @@
                 <li>Zun</li>
 
             </ul>
-       
+            <figure>
+                <img src="img/recordPlayer.png" class="small" alt="My Record Player"> 
+                <figcaption>My Recordplayer</figcaption>
+            </figure>
 
  
 
@@ -109,6 +112,15 @@
             <audio controls>
                 <source src="music/Grandeur.mp3" type="audio/mpeg">
             </audio>
+            <figure>
+                <img src="img/image.png" class="small" alt="My setup on FL Studio"> 
+                <figcaption>My Setup on FL Studio</figcaption>
+            </figure>
+
+            <figure>
+                <img src="img/image2.png" class="small" alt="A view at the song pattern"> 
+                <figcaption>More of the Song</figcaption>
+            </figure>
 
         </section>
         <section id="where" class="content-section"><h3>Where</h3>
@@ -125,6 +137,10 @@
             <audio controls>
                 <source src="music/palmtreeSorrows.mp3" type="audio/mpeg">
             </audio>
+            <figure>
+                <img src="img/tape.png" class="small" alt="My tape recorder"> 
+                <figcaption>My Tape Recorder</figcaption>
+            </figure>
         </section>
 
         <section id="how" class="content-section"><h3>How</h3>
