--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -203,7 +203,7 @@
                 <!--p>If I want to show text on the left of the screen and an image on the right of the website, how would I do it in HTML?</p>
             --></section>
         <footer>
-            <p>Page Designed by <a href="santana_corp.com/">Santana Corp</a>, Return to the <a href="/itis3135/index.html">ITIS 3135</a> page?</p>
+            <p>Page Designed by <a href="/itis3135/santana_corp.com/">Santana Corp</a>, Return to the <a href="/itis3135/index.html">ITIS 3135</a> page?</p>
           
         </footer>
         <script src="script.js"></script>
