--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -43,7 +43,7 @@
             
 
             <div id="coursesContainer">
-                <label for="courses">Courses currently taking:</label><br>
+                <label>Courses currently taking:</label><br>
                 <div id="courses">
                     <button type="button" id="addCourse">Add Course</button>
                 </div>
