--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -22,6 +22,10 @@
            
 
             <label>Image:<input type="file" id="image" accept=".jpg,.png"></label><br>
+
+            <button type="button" onclick="loadImgage()">Click here to load Image</button><br><br>
+
+                <div id="loadImage"></div>
           
             <label>Image Caption:</label><br>
             <input type="text" id="caption" required value="At prom"><br><br>
