--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -57,7 +57,7 @@
          
             <label>Anything else about yourself?  <input type="text" id="anythingElse" value="My favorite genres of music are Prog rock, Surf Rock, and Punk Rock."></label>
 
-            <label for="check">Check this box if you agree with the statement.</label> <br><br>
+            <label>Check this box if you agree with the statement.</label> <br><br>
             <input type="checkbox" id="agreement" required>
             
             <label> "I understand that what is on this page is not password protected and I will not put anything here that I don’t want publicly available."</label>
