--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -23,7 +23,7 @@
 
             <label>Image:<input type="file" id="image" accept=".jpg,.png"></label><br>
 
-            <button type="button" onclick="loadImgage()">Click here to load Image</button><br><br>
+            <button type="button" onclick="loadImage()">Click here to load Image</button><br><br>
 
                 <div id="loadImage"></div>
           
