--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -23,9 +23,9 @@
 
             <label>Image:<input type="file" id="image" accept=".jpg,.png"></label><br>
 
-            <button type="button" onclick="loadImage()">Click here to load Image</button><br><br>
+            <!--button type="button" onclick="loadImage()">Click here to load Image</button><br><br>
 
-                <div id="loadImage"></div>
+                <div id="loadImage"></div-->
           
             <label>Image Caption:</label><br>
             <input type="text" id="caption" required value="At prom"><br><br>
